# classical-ciphers.rs

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
src/: affine.rs  atbash.rs  caesar.rs  lib.rs  magic_square.rs  polybius.rs  vigenere.rs  xor.rs
